--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2.46.1/dist/umd/supabase.js"></script>
 
   <!-- Your auth logic (edited earlier) -->
-  <script defer src="login.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <video id="background-video" autoplay loop muted playsinline>
